@@ -4,6 +4,27 @@ using Yafc.Model;
 using Yafc.UI;
 
 namespace Yafc {
+    /// <summary>
+    /// The location(s) where <see cref="ObjectTooltip"/> should display hints
+    /// (currently only "ctrl+click to add recipe" hints)
+    /// </summary>
+    [Flags]
+    public enum HintLocations {
+        /// <summary>
+        /// Do not display any hints.
+        /// </summary>
+        None = 0,
+        /// <summary>
+        /// Display the ctrl+click recipe-selection hint associated with recipes that produce this <see cref="Goods"/>.
+        /// </summary>
+        OnProducingRecipes = 1,
+        /// <summary>
+        /// Display the ctrl+click recipe-selection hint associated with recipes that consume this <see cref="Goods"/>.
+        /// </summary>
+        OnConsumingRecipes = 2,
+        // NOTE: This is [Flags]. The next item, if applicable, should be 4.
+    }
+
     public class ObjectTooltip : Tooltip {
         public static readonly Padding contentPadding = new Padding(1f, 0.25f);
 
@@ -280,6 +301,10 @@ namespace Yafc {
                 BuildSubHeader(gui, "Made with");
                 using (gui.EnterGroup(contentPadding)) {
                     BuildIconRow(gui, goods.production, 2);
+                    if (tooltipOptions.HintLocations.HasFlag(HintLocations.OnProducingRecipes)) {
+                        goods.production.SelectSingle(out string recipeTip);
+                        gui.BuildText(recipeTip, color: SchemeColor.BackgroundTextFaint);
+                    }
                 }
             }
 
@@ -294,6 +319,10 @@ namespace Yafc {
                 BuildSubHeader(gui, "Needed for");
                 using (gui.EnterGroup(contentPadding)) {
                     BuildIconRow(gui, goods.usages, 4);
+                    if (tooltipOptions.HintLocations.HasFlag(HintLocations.OnConsumingRecipes)) {
+                        goods.usages.SelectSingle(out string recipeTip);
+                        gui.BuildText(recipeTip, color: SchemeColor.BackgroundTextFaint);
+                    }
                 }
             }
 
@@ -512,5 +541,12 @@ namespace Yafc {
         /// e.g. "Radar" is the item, "Radar (Recipe)" is the recipe, and "Radar (Entity)" is the building.
         /// </summary>
         public bool ExtendHeader { get; set; }
+        /// <summary>
+        /// Gets or sets flags indicating where hints should be displayed in the tooltip.
+        /// </summary>
+        public HintLocations HintLocations { get; set; }
+
+        // Reduce boilerplate by permitting unambiguous and relatively obvious implicit conversions.
+        public static implicit operator ObjectTooltipOptions(HintLocations hintLocations) => new() { HintLocations = hintLocations };
     }
 }
